Changed package.json names.

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "server",
+    "name": "simple-login-server",
     "version": "0.0.0",
     "description": "description",
     "author": "",
