--- a/package.json
+++ b/package.json
@@ -5,30 +5,29 @@
     "main": "index.js",
     "scripts": {
         "format": "prettier --write \"**/*.ts\"",
-        "install-client": "cd client&&npm i",
-        "install-server": "cd server&&npm i",
-        "install": "npm run install-client&&npm run install-server&&npm run gen-client",
-        "serve-client": "cd client&&npm run start",
-        "debug-server": "cd server&&npm run start:debug",
-        "start-server": "cd server&&npm run start",
-        "build-client": "cd client&&npm run build",
-        "build-client-prod": "cd client&&npm run build:prod",
-        "build-client-dev": "cd client&&npm run build:dev",
-        "dev": "start  npm run debug-server | start npm run build-client | (cd client && code .) | (cd server && code .)",
-        "prod": "set NODE_ENV=production&&ts-node app",
-        "marker": "set NODE_ENV=marker&&ts-node app",
-        "start-dev": "set NODE_ENV=dev&&npm run build-client-prod&&npm run start-server",
-        "test": "ts-node ./test/index",
-        "deploy-dev": "npm i&& npm run start-dev",
-        "deploy-prod": "npm run git&&npm i&&npm run build-client-prod&& npm run serve-static &&npm run pm2-start-server",
-        "pm2-start-server": "cd server && pm2 start --name server npm --  start",
+        "install-client": "cd frontend && npm i",
+        "install-server": "cd backend && npm i",
+        "install": "npm run install-client && npm run install-server",
+        "serve-client": "cd frontend && npm run start",
+        "debug-server": "cd backend && npm run start:debug",
+        "start-server": "cd backend && npm run start",
+        "build-client": "cd frontend && npm run build",
+        "build-client-prod": "cd frontend && npm run build:prod",
+        "build-client-dev": "cd frontend && npm run build:dev",
+        "dev": "start npm run debug-server | start npm run build-client | (cd frontend && code .) | (cd backend && code .)",
+        "prod": "set NODE_ENV=production && ts-node app",
+        "marker": "set NODE_ENV=marker && ts-node app",
+        "start-dev": "set NODE_ENV=dev && npm run build-client-prod && npm run start-server",
+        "deploy-dev": "npm i && npm run start-dev",
+        "deploy-prod": "npm run git && npm i && npm run build-client-prod && npm run serve-static && npm run pm2-start-server",
+        "pm2-start-server": "cd backend && pm2 start --name server npm -- start",
         "pm2-serve-static": "tsc serve-static && pm2 start serve-static.js",
         "pm2-serve-static-restart": "tsc serve-static && pm2 restart serve-static",
-        "build:client:cordova": "cd client&& npm run build:cordova",
+        "build:client:cordova": "cd frontend && npm run build:cordova",
         "serve-static": "ts-node serve-static",
         "gen-uml": "tsuml --glob ./shared/**/*.ts",
         "lint": "tslint -p .",
-        "lint:fix": "tslint -p . --fix&&cd client&&ng lint --fix",
+        "lint:fix": "tslint -p . --fix && cd frontend && ng lint --fix",
         "open-ports": "sudo iptables -A INPUT -p tcp --dport 4001 --jump ACCEPT",
         "open-client-port": "sudo iptables -A INPUT -p tcp --dport 4001 --jump ACCEPT"
     },
