--- a/backend/package.json
+++ b/backend/package.json
@@ -16,24 +16,25 @@
     "dependencies": {
         "@nest-middlewares/compression": "^6.0.0",
         "@nestjs/common": "^7.4.4",
+        "@nestjs/config": "^0.5.0",
         "@nestjs/core": "^7.4.4",
         "@nestjs/platform-fastify": "^7.4.4",
+        "@types/bcryptjs": "^2.4.2",
         "bcryptjs": "^2.4.3",
         "fastify-cookie": "^3.0.2",
         "fastify-cors": "^2.1.2",
         "fastify-static": "^2.4.0",
+        "jsonwebtoken": "^8.5.1",
         "module-alias": "^2.2.0",
         "mongo-nest": "^1.0.0",
         "mongodb": "^3.1.13",
         "mongodb-backup": "^1.6.9",
         "mongodb-restore": "^1.6.2",
-        "node-cache": "^4.2.0",
         "reflect-metadata": "^0.1.12",
         "rxjs": "^6.3.3"
     },
     "devDependencies": {
         "@nestjs/swagger": "^4.6.1",
-        "@types/bcryptjs": "^2.4.2",
         "@types/express": "^4.16.0",
         "@types/mongodb": "^3.1.19",
         "@types/node": "^10.12.18",
