--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,6 @@
     "@angular/platform-browser-dynamic": "^10.1.5",
     "@angular/platform-server": "^10.1.5",
     "@angular/router": "^10.1.5",
-    "@ngxs/devtools-plugin": "^3.7.0",
     "@ngxs/form-plugin": "^3.7.0",
     "@ngxs/hmr-plugin": "^3.7.0",
     "@ngxs/logger-plugin": "^3.7.0",
@@ -50,7 +49,9 @@
     "@ngxs/schematics": "0.0.1-alpha.5",
     "@ngxs/storage-plugin": "^3.7.0",
     "@ngxs/store": "^3.7.0",
+    "@types/gapi.auth2": "0.0.52",
     "http-server": "^0.12.1",
+    "ng-gapi": "0.0.94",
     "rxjs": "~6.5.5",
     "subsink": "^1.0.1",
     "tslib": "^2.0.0",
